--- a/kursspring/pom.xml
+++ b/kursspring/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.1.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.clockworkjava</groupId>
+	<groupId>com.example</groupId>
 	<artifactId>kursspring</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>kursspring</name>
