--- a/kursspring/pom.xml
+++ b/kursspring/pom.xml
@@ -54,6 +54,12 @@
 			<version>3.3.7-1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.0.23.Final</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
