--- a/kursspring/src/main/resources/application.properties
+++ b/kursspring/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.main.allow-bean-definition-overriding=true
 questCreationDelay = 50000
 spring.profiles.active = dev
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
+server.error.path=/custom-error
