--- a/kursspring/src/main/resources/application.properties
+++ b/kursspring/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.profiles.active = dev
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 server.error.path=/custom-error
+spring.h2.console.enabled=true
