--- a/kursspring/src/main/resources/application.properties
+++ b/kursspring/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 server.error.path=/custom-error
 spring.h2.console.enabled=true
+spring.datasource.url = jdbc:h2:mem:testdb
