--- a/kursspring/src/main/resources/application.properties
+++ b/kursspring/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.resources.add-mappings=false
 server.error.path=/custom-error
 spring.h2.console.enabled=true
 spring.datasource.url = jdbc:h2:mem:testdb
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
